bug 571800 alert undoing imap delete, r/sr=standard8